--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <!-- HEADER -->
 
-    <header class="main_header">
-      <nav class="site_menu">
+    <header class="main-header">
+      <nav class="site-menu">
         <a class="header-logo">
           <img src="img/svg/logo-sedona.svg" alt="логотип City of Sedona" height="71px" width="140px">
         </a>
-        <ul class="site_navigation">
+        <ul class="site-navigation">
           <li><a href="#">Информация</a></li>
           <li><a href="#">Фото и Видео</a></li>
           <li><a href="#">Карта штата</a></li>
@@ -41,10 +41,10 @@
       <section class="features">
         <ol>
           <li class="feature-item">
-            <div class="item-text">
+            <div class="feature-item__text">
               <h3>Настоящий городок</h3>
-              <span class="feature_number_left">№1</span>
-              <p class="feature_describtion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <span class="feature-item__number_left">№1</span>
+              <p class="feature-item__describtion">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div>
               <img src="img/photo-feature1.jpg" alt="Фото: настоящий городок" width="800px" height="256px">
@@ -70,40 +70,40 @@
 
           <li class="feature-item">
             <h3>Там есть мост дьявола</h3>
-            <span class="feature_number_right">№2</span>
-            <p class="feature_describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            <span class="feature-item__number_right">№2</span>
+            <p class="feature-item__describtion">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             <img src="img/photo-feature2.jpg" alt="Фото: мост дьявола" width="800px" height="256px">
           </li>
           <li class="feature-item">
             <h3>Небольшая площадь</h3>
-            <span class="feature_number">№3</span>
-            <p class="feature_describtion">Все достопримечательности находятся очень близко</p>
+            <span class="feature-item__number">№3</span>
+            <p class="feature-item__describtion">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="feature-item">
             <h3>Красивая дорога</h3>
-            <span class="feature_number">№4</span>
-            <p class="feature_describtion">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <span class="feature-item__number">№4</span>
+            <p class="feature-item__describtion">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="feature-item">
             <h3>Мало туристов</h3>
-            <span class="feature_number">№5</span>
-            <p class="feature_describtion">Большинство едет в гранд каньон и толпится там</p>
+            <span class="feature-item__number">№5</span>
+            <p class="feature-item__describtion">Большинство едет в гранд каньон и толпится там</p>
           </li>
         </ol>
       </section>
 
       <!-- Предложения гостиниц -->
 
-      <section class="hotels">
+      <section class="booking">
         <div>
           <p><b>Заинтересовались?</b></p>
           <p>Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в седоне</p>
         </div>
-        <a class="hotel_search" href="#">Поиск Гостиницы в Седоне</a>
+        <a class="booking__search" href="#">Поиск Гостиницы в Седоне</a>
 
         <!-- Всплывающее окно: Формы для выбора параметров поездки и бронирования жилья -->
-        <div class="trip_options">
+        <div class="booking__options">
           <h2 class="visually-hidden">Параметры поездки</h2>
         </div>
       </section>
@@ -116,9 +116,9 @@
     </main>
 
     <!-- Футер -->
-    <footer class="site_footer">
+    <footer class="site-footer">
       <p class="hashtag">#VISITSEDONA</p>
-      <ul class="footer-sociallinks">
+      <ul class="sociallinks">
         <!-- Иконки фоновые => в CSS -->
         <li><a class="social-button" href="#">Твитер</a></li>
         <li><a class="social-button" href="#">Фейсбук</a></li>
