--- a/index.html
+++ b/index.html
@@ -106,23 +106,25 @@
         <form class="booking-form" action="https://echo.htmlacademy.ru" method="POST">
           <p>
             <label for="arrival-date">Дата заезда</label>
-            <input type="date" id="arrival-date" value="" placeholder="24 апреля 2017">
+            <input type="text" id="arrival-date" name="arrival-date" value="" placeholder="24 апреля 2017" required>
+            <button class="calendar-button" type="button" aria-label="Выбор даты"></button>
           </p>
           <p>
             <label for="departure-date">Дата выезда</label>
-            <input type="date" id="departure-date" value="" placeholder="4 июля 2017">
+            <input type="text" id="departure-date" name="departure-date" value="" placeholder="4 июля 2017" required>
+            <button class="calendar-button" type="button" aria-label="Выбор даты"></button>
           </p>
           <p>
-            <label>
-              <input type="number" placeholder="1">
-              Взрослые
-            </label>
+            <label for="number-of-adults">Взрослые</label>
+            <input type="number" value="1" id="number-of-adults" name="number-of-adults">
+            <button class="booking-form_rate-button" type="button" aria-label="Добавить">+</button>
+            <button class="booking-form_rate-button" type="button" aria-label="Уменьшить">-</button>
           </p>
           <p>
-            <label>
-              <input type="number" placeholder="1">
-              Дети
-            </label>
+            <label for="number-of-children">Дети</label>
+            <input type="number" name="number-of-children" id="number-of-children" value="1">
+            <button class="booking-form_rate-button" type="button" aria-label="Добавить">+</button>
+            <button class="booking-form_rate-button" type="button" aria-label="Уменьшить">-</button>
           </p>
           <button class="button" type="submit">Найти</button>
         </form>
