исправил замечания наставника

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</h2>
       </section>
 
-      <!-- Блок с преимуществами  -->
+      <!-- Блок: Список преимуществ  -->
 
       <section class="features">
         <ol class="feature-list1">
@@ -52,23 +52,31 @@
               <img src="img/photo-feature1.jpg" alt="Фото: городская жизнь в Седоне" width="800px" height="256px">
             </div>
 
-            <!-- Нужна ли обёртка для списка ниже или сам список может являться обёрткой? -->
+            <!--Список с дополнительными бонусами -->
+
             <ul class="feature-list2">
               <!-- иконки фоновые, т.е. делаются в CSS -->
               <li class="house">
-                <h3>Жильё</h3>
-                <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <div class="feature-list2-textbox">
+                  <h3>Жильё</h3>
+                  <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                </div>
               </li>
               <li class="food">
-                <h3>Еда</h3>
-                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                <div class="feature-list2-textbox">
+                  <h3>Еда</h3>
+                  <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </div>
               </li>
               <li class="gifts">
-                <h3>Сувениры</h3>
-                <p>Не только китайского, но и местного производства!</p>
+                <div class="feature-list2-textbox">
+                  <h3>Сувениры</h3>
+                  <p>Не только китайского, но и местного производства!</p>
+                </div>
               </li>
             </ul>
           </li>
+
 
           <li class="feature-item">
             <div class="feature-item-textbox">
