разбираюсь с интерактивностью логотипа

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="copyright">
         <p>Website by</p>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <object type="image/svg+xml" data="img/svg/logo-htmlacademy.svg" width="115" height="41">
+          <object class="copyright-logo" type="image/svg+xml" data="img/svg/logo-htmlacademy.svg" width="115" height="41">
             <img src="img/logo_htmlacademy_small.png" width="115" height="41" alt="Логотип HtmlAcademy">
           </object>
           <!-- Или так?
